fixed buttons on smallest device

--- a/styles/add-task-responsiv.css
+++ b/styles/add-task-responsiv.css
@@ -258,3 +258,11 @@
         align-items: center;
     }
 }
+
+@media (max-height: 668px){
+    .addTaskContainer{
+        padding-left: 16px;
+        padding-right: 16px;
+    }
+}
+
